# noisesculptors-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: arm-none-eabi-gcc.cmake
include/g0x0/: flash.h  gpio.h  memory.h  pwr.h  rcc.h  timer.h  usart_uart.h  vtor.h
include/h750/: dma.h  dmamux.h  dwt.h  flash.h  gpio.h  i2c.h  memory.h  nvic.h  nvic_exti.h  pwr.h  qspi.h  rcc.h  rng.h  sdmmc.h  spi.h  spi_i2s.h  syscfg.h  systick.h  timer.h  usart_uart.h  usart_uart_lpuart.h  usb.h  vtor.h
ldscripts/g0x0/: linker_flash.ld  linker_sram.ld  memory_map_g030.ld
ldscripts/h750/: linker_axi.ld  linker_dtcm.ld  linker_flash.ld  memory_map.ld  memory_map_h750.ld
src/g0x0/init/: init.c  init.h
src/g0x0/serial/: serial.c  serial.h
src/h750/: Makefile
src/h750/delay/: delay.c  delay.h
src/h750/dwt/: dwt.c
src/h750/gpio/: gpio.c
src/h750/i2c/: i2c.c
src/h750/init/: init.c  init.h
src/h750/nvic/: nvic.c  nvic.h
src/h750/qspi/: qspi.c
src/h750/rng/: rng.c
src/h750/serial/: serial.c  serial.h
src/h750/syscall/: syscall.c  syscall.h
src/h750/systick/: systick.c
src/h750/usart1/: usart1.c  usart1.h
startup/common/: CMakeLists.txt  README.md  trampoline.S
startup/g0x0/: startup.c
startup/h750/: startup.c  startup_flash.c  startup_sram.c
